# EasyServerManager

./: .env  Cargo.toml  Config.toml  README.md
src/: global.rs  main.rs  my_env.rs
src/modules/: mod.rs
src/modules/config/: configs.rs  mod.rs
src/modules/system/: mod.rs  sysinfo_serde.rs  system_ext.rs
src/modules/user/: error.rs  mod.rs  request.rs  sys_user_route.rs
src/modules/user/dto/: mod.rs  sys_user_dto.rs
src/modules/user/model/: sys_user.rs
src/modules/user/resource/: mod.rs  sys_user.rs
src/modules/user/service/: mod.rs  sys_user.rs
src/modules/ws/: mod.rs  ws_protocol.rs
