[package]
name = "EasyServerManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = {version = "1.21.1", features = ["full"] }
serde = {version = "1.0.144", features = ["derive"]}
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"