[package]
name = "EasyServerManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = {version = "1.21.1", features = ["full"] }
serde = {version = "1.0.144", features = ["derive"]}
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
once_cell = "1.15.0"
colored = "2.0.0"
tower = "0.4.13"
# orm
rbs = "0.1.11"
rbatis = "4.0.39"
rbdc-sqlite = "0.1.14"
rbdc-pg = "0.1.19"
rbdc-mssql = "0.1.17"
rbdc-mysql = "0.1.17"