[package]
name = "EasyServerManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5.16", features= ["default", "headers", "ws"] }
#axum = "0.6.0-rc.2"
axum-macros = "0.2.3"
tokio = {version = "1.21.1", features = ["full"] }
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
once_cell = "1.15.0-pre.1"
async-once-cell = "0.4.2"
colored = "2.0.0"
tower = "0.4.13"
headers = "0.3.8"
tower-http = { version = "0.3.4", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
sysinfo = "0.26.2"
# orm
rbs = "0.1.11"
rbatis = "4.0.39"
rbdc-sqlite = "0.1.14"
rbdc-pg = "0.1.19"
rbdc-mssql = "0.1.16"
rbdc-mysql = "0.1.17"

chrono = "0.4.22"
jsonwebtoken = "8.1.1"